samples/_failures_safe/1761434869_c4fcdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_143bdc44.c: In function ‘read_matrix_from_input’:
./samples/SAFE/__tmp_143bdc44.c:168:16: error: missing terminating " character
  168 |         printf("
      |                ^
./samples/SAFE/__tmp_143bdc44.c:168:9: error: expected expression at end of input
  168 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_143bdc44.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_143bdc44.c:168:9: error: expected declaration or statement at end of input
